<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText1"
        android:layout_width="370dp"
        android:layout_height="134dp"
        android:inputType="text"
        android:autofillHints=""
        android:hint="@string/uno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="366dp"
        android:layout_height="133dp"
        android:inputType="text"
        android:autofillHints=""
        android:hint="@string/dos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <Button
        android:id="@+id/buttonCompare"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/tres"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="374dp" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="294dp"
        android:layout_height="84dp"
        android:layout_marginTop="108dp"
        android:text="@string/cuatro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCompare" />
</androidx.constraintlayout.widget.ConstraintLayout>